Se conecta el desarrollo con la plataforma @firma
git-svn-id: http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/trunk/project@3221 dcdbb401-323c-49cf-88a0-803402807c85